[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/doors-front.png" type="Texture" id=1]
[ext_resource path="res://nodes/environment/Door.old/Door.old.gd" type="Script" id=2]
[ext_resource path="res://assets/images/doors-base.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 48 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 48 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 48 )

[node name="Door" type="Sprite"]
self_modulate = Color( 0.00784314, 0.862745, 0, 1 )
z_index = 11
texture = ExtResource( 1 )
script = ExtResource( 2 )
color_front = Color( 0.00784314, 0.862745, 0, 1 )
color_back = Color( 0.333333, 0.376471, 0.372549, 1 )
lock_timeout = 1.0

[node name="Lock" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -48, 0 )
monitorable = false
collision_layer = 0
collision_mask = 2050

[node name="Collision" type="CollisionShape2D" parent="Lock"]
shape = SubResource( 1 )

[node name="Back" type="Sprite" parent="."]
editor/display_folded = true
self_modulate = Color( 0.333333, 0.376471, 0.372549, 1 )
position = Vector2( -48, 0 )
texture = ExtResource( 3 )

[node name="Body" type="StaticBody2D" parent="Back"]
position = Vector2( -16, 0 )
collision_layer = 0
collision_mask = 6150

[node name="Collision" type="CollisionShape2D" parent="Back/Body"]
self_modulate = Color( 0.960784, 0, 0, 1 )
shape = SubResource( 2 )

[node name="Front" type="StaticBody2D" parent="."]
editor/display_folded = true
collision_layer = 0
collision_mask = 4102

[node name="Collision" type="CollisionShape2D" parent="Front"]
self_modulate = Color( 0.235294, 1, 0.341176, 1 )
shape = SubResource( 3 )

[node name="LockTimeout" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="Lock" to="." method="_on_Lock_area_entered"]
[connection signal="body_entered" from="Lock" to="." method="_on_Lock_body_entered"]
[connection signal="body_exited" from="Lock" to="." method="_on_Lock_body_exited"]
[connection signal="timeout" from="LockTimeout" to="." method="_on_LockTimeout_timeout"]
